# CGDenoiser

./: .gitignore  BUILDING.md  CMakeLists.txt  README.md  install.bat  install.ps1  install.sh  run.bat
building/: CMakeLists.txt  build.bat  build.ps1  build.sh
cmake/: install_nuke_plugin.cmake
cmake/Modules/: FindNuke.cmake  FindOpenImageDenoise.cmake  FindOptiX.cmake
scripts/: init.py  menu.py
src/: CMakeLists.txt  denoiser.cpp  denoiser.h  denoiserData.cpp  denoiserData.h  oidnDenoiser.cpp  oidnDenoiser.h  optixDenoiser.cpp  optixDenoiser.h
